Fixing space and alignment.

--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -52,7 +52,8 @@ $frontera-portal-color-primary: #9d85ef;
   margin-top: 11px;
   padding: 0;
   left: -20px;
-  width: 200px;
+  width: 230px;
+  vertical-align: top;
 }
 .dropdown-menu:before {
   position: absolute;
@@ -81,6 +82,7 @@ $frontera-portal-color-primary: #9d85ef;
 
 .multiline-menu-item-wrapper {
   display: inline-block;
+  padding-left: 5px;
   line-height: 1.1em;
   small {
     display: block;
@@ -88,12 +90,14 @@ $frontera-portal-color-primary: #9d85ef;
   }
 }
 
-.dropdown-item{
+.dropdown-item {
   padding: 10px 6px;
-  size: 10px;
   color: #707070;
+  font-size: 14px;
   i {
       padding-right: 19px;
+      font-size: 17px;
+      vertical-align: middle;
   }
   &:hover {
     color: #707070;
